syntax = "proto3";

package com.tservice.proto.domaintservice;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service DomainTserviceService {
  rpc createDomainTservice(CreateProto) returns (DomainTserviceProto);
  rpc updateDomainTservice(UpdateProto) returns (DomainTserviceProto);
  rpc deleteDomainTservice(DeleteProto) returns (google.protobuf.Empty);
  rpc findById(FindByIdProto) returns (DomainTserviceProto);
  rpc findAll(FindAllProto) returns (stream DomainTserviceProto);
  rpc findByDomainId(FindByDomainIdProto) returns (stream DomainTserviceProto);
  rpc findByTserviceId(FindByTserviceIdProto) returns (stream DomainTserviceProto);
}

message DomainTserviceProto {
  string id = 1;
  string domainId = 2;
  string tserviceId = 3;
}

message CreateProto {
  string domainId = 1;
  string tserviceId = 2;
}

message UpdateProto {
  string id = 1;
  string domainId = 2;
  string tserviceId = 3;
}

message DeleteProto {
  string id = 1;
}

message FindByIdProto {
  string id = 1;
}

message FindAllProto {
}

message FindByDomainIdProto {
  string domainId = 1;
}

message FindByTserviceIdProto {
  string tserviceId = 1;
}


